Refactor: 스터디 도메인 서비스 분리와 통계 집계 개선
StudyDomainService 책임을 세션/레코드 서비스로 분리
대시보드 및 통계 계산에 사용자 카드 집계 반영
카테고리별 카드 집계를 위한 전용 aggregation 서비스 추가
스터디 통계 쿼리와 사용자 카드 카운트 쿼리 확장
관련 단위 테스트 갱신 및 기존 통합 서비스 테스트 제거