@@ -1,13 +1,14 @@
 package com.example.study_cards.application.stats.service;
 
 import com.example.study_cards.application.stats.dto.response.StatsResponse;
-import com.example.study_cards.domain.card.repository.CardRepositoryCustom.CategoryCount;
+import com.example.study_cards.application.study.service.StudyCategoryAggregationService;
 import com.example.study_cards.domain.card.service.CardDomainService;
 import com.example.study_cards.domain.category.entity.Category;
 import com.example.study_cards.domain.category.service.CategoryDomainService;
 import com.example.study_cards.domain.study.repository.StudyRecordRepositoryCustom;
-import com.example.study_cards.domain.study.service.StudyDomainService;
+import com.example.study_cards.domain.study.service.StudyRecordDomainService;
 import com.example.study_cards.domain.user.entity.User;
+import com.example.study_cards.domain.usercard.service.UserCardDomainService;
 import com.example.study_cards.support.BaseUnitTest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -21,6 +22,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -30,13 +32,19 @@ import static org.mockito.BDDMockito.given;
 class StatsServiceUnitTest extends BaseUnitTest {
 
     @Mock
-    private StudyDomainService studyDomainService;
+    private StudyRecordDomainService studyRecordDomainService;
+
+    @Mock
+    private StudyCategoryAggregationService studyCategoryAggregationService;
 
     @Mock
     private CardDomainService cardDomainService;
 
     @Mock
     private CategoryDomainService categoryDomainService;
+
+    @Mock
+    private UserCardDomainService userCardDomainService;
 
     @InjectMocks
     private StatsService statsService;
@@ -84,23 +92,26 @@ class StatsServiceUnitTest extends BaseUnitTest {
             // given
             LocalDate today = LocalDate.now();
 
-            given(studyDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(5);
-            given(studyDomainService.countTotalStudiedCards(testUser)).willReturn(50);
+            given(studyRecordDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(5);
+            given(studyRecordDomainService.countTotalStudiedCards(testUser)).willReturn(50);
+            given(studyRecordDomainService.countTotalStudiedUserCards(testUser)).willReturn(10);
             given(cardDomainService.count()).willReturn(100L);
-            given(studyDomainService.countTotalAndCorrect(testUser))
+            given(userCardDomainService.countByUser(testUser)).willReturn(20L);
+            given(studyRecordDomainService.countTotalAndCorrect(testUser))
                     .willReturn(new StudyRecordRepositoryCustom.TotalAndCorrect(100L, 80L));
 
             given(categoryDomainService.findLeafCategories()).willReturn(List.of(testCategory));
-            given(cardDomainService.countAllByCategory()).willReturn(List.of(new CategoryCount(CATEGORY_ID, "CS", 50L)));
-            given(studyDomainService.countStudiedByCategory(testUser))
+            given(studyCategoryAggregationService.countTotalCardsByCategoryWithUserCards(testUser))
+                    .willReturn(Map.of("CS", 70L));
+            given(studyRecordDomainService.countStudiedByCategoryWithUserCards(testUser))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 30L)));
-            given(studyDomainService.countLearningByCategory(testUser))
+            given(studyRecordDomainService.countLearningByCategoryWithUserCards(testUser))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 10L)));
-            given(studyDomainService.countDueByCategory(eq(testUser), any(LocalDate.class)))
+            given(studyRecordDomainService.countDueByCategoryWithUserCards(eq(testUser), any(LocalDate.class)))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 5L)));
-            given(studyDomainService.countMasteredByCategory(testUser))
+            given(studyRecordDomainService.countMasteredByCategoryWithUserCards(testUser))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 15L)));
-            given(studyDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
+            given(studyRecordDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.DailyActivity(today, 10L, 8L)));
 
             // when
@@ -110,8 +121,8 @@ class StatsServiceUnitTest extends BaseUnitTest {
             assertThat(result).isNotNull();
             assertThat(result.overview()).isNotNull();
             assertThat(result.overview().dueToday()).isEqualTo(5);
-            assertThat(result.overview().totalStudied()).isEqualTo(50);
-            assertThat(result.overview().newCards()).isEqualTo(50);
+            assertThat(result.overview().totalStudied()).isEqualTo(60);
+            assertThat(result.overview().newCards()).isEqualTo(60);
             assertThat(result.overview().streak()).isEqualTo(5);
             assertThat(result.overview().accuracyRate()).isEqualTo(80.0);
         }
@@ -120,20 +131,23 @@ class StatsServiceUnitTest extends BaseUnitTest {
         @DisplayName("학습 기록이 없을 때 통계 정보를 조회한다")
         void getStats_withNoRecords_returnsEmptyStats() {
             // given
-            given(studyDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(0);
-            given(studyDomainService.countTotalStudiedCards(testUser)).willReturn(0);
+            given(studyRecordDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(0);
+            given(studyRecordDomainService.countTotalStudiedCards(testUser)).willReturn(0);
+            given(studyRecordDomainService.countTotalStudiedUserCards(testUser)).willReturn(0);
             given(cardDomainService.count()).willReturn(100L);
-            given(studyDomainService.countTotalAndCorrect(testUser))
+            given(userCardDomainService.countByUser(testUser)).willReturn(0L);
+            given(studyRecordDomainService.countTotalAndCorrect(testUser))
                     .willReturn(new StudyRecordRepositoryCustom.TotalAndCorrect(0L, 0L));
 
             given(categoryDomainService.findLeafCategories()).willReturn(List.of(testCategory));
-            given(cardDomainService.countAllByCategory()).willReturn(List.of(new CategoryCount(CATEGORY_ID, "CS", 50L)));
-            given(studyDomainService.countStudiedByCategory(testUser)).willReturn(Collections.emptyList());
-            given(studyDomainService.countLearningByCategory(testUser)).willReturn(Collections.emptyList());
-            given(studyDomainService.countDueByCategory(eq(testUser), any(LocalDate.class)))
+            given(studyCategoryAggregationService.countTotalCardsByCategoryWithUserCards(testUser))
+                    .willReturn(Map.of("CS", 50L));
+            given(studyRecordDomainService.countStudiedByCategoryWithUserCards(testUser)).willReturn(Collections.emptyList());
+            given(studyRecordDomainService.countLearningByCategoryWithUserCards(testUser)).willReturn(Collections.emptyList());
+            given(studyRecordDomainService.countDueByCategoryWithUserCards(eq(testUser), any(LocalDate.class)))
                     .willReturn(Collections.emptyList());
-            given(studyDomainService.countMasteredByCategory(testUser)).willReturn(Collections.emptyList());
-            given(studyDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
+            given(studyRecordDomainService.countMasteredByCategoryWithUserCards(testUser)).willReturn(Collections.emptyList());
+            given(studyRecordDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
                     .willReturn(Collections.emptyList());
 
             // when
@@ -151,23 +165,26 @@ class StatsServiceUnitTest extends BaseUnitTest {
         @DisplayName("덱 통계를 정확하게 계산한다")
         void getStats_calculatesDeckStats() {
             // given
-            given(studyDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(0);
-            given(studyDomainService.countTotalStudiedCards(testUser)).willReturn(0);
+            given(studyRecordDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(0);
+            given(studyRecordDomainService.countTotalStudiedCards(testUser)).willReturn(0);
+            given(studyRecordDomainService.countTotalStudiedUserCards(testUser)).willReturn(0);
             given(cardDomainService.count()).willReturn(100L);
-            given(studyDomainService.countTotalAndCorrect(testUser))
+            given(userCardDomainService.countByUser(testUser)).willReturn(0L);
+            given(studyRecordDomainService.countTotalAndCorrect(testUser))
                     .willReturn(new StudyRecordRepositoryCustom.TotalAndCorrect(0L, 0L));
 
             given(categoryDomainService.findLeafCategories()).willReturn(List.of(testCategory));
-            given(cardDomainService.countAllByCategory()).willReturn(List.of(new CategoryCount(CATEGORY_ID, "CS", 100L)));
-            given(studyDomainService.countStudiedByCategory(testUser))
+            given(studyCategoryAggregationService.countTotalCardsByCategoryWithUserCards(testUser))
+                    .willReturn(Map.of("CS", 100L));
+            given(studyRecordDomainService.countStudiedByCategoryWithUserCards(testUser))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 40L)));
-            given(studyDomainService.countLearningByCategory(testUser))
+            given(studyRecordDomainService.countLearningByCategoryWithUserCards(testUser))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 20L)));
-            given(studyDomainService.countDueByCategory(eq(testUser), any(LocalDate.class)))
+            given(studyRecordDomainService.countDueByCategoryWithUserCards(eq(testUser), any(LocalDate.class)))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 10L)));
-            given(studyDomainService.countMasteredByCategory(testUser))
+            given(studyRecordDomainService.countMasteredByCategoryWithUserCards(testUser))
                     .willReturn(List.of(new StudyRecordRepositoryCustom.CategoryCount(CATEGORY_ID, "CS", 30L)));
-            given(studyDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
+            given(studyRecordDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
                     .willReturn(Collections.emptyList());
 
             // when
@@ -189,20 +206,23 @@ class StatsServiceUnitTest extends BaseUnitTest {
             LocalDate today = LocalDate.now();
             LocalDate yesterday = today.minusDays(1);
 
-            given(studyDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(0);
-            given(studyDomainService.countTotalStudiedCards(testUser)).willReturn(0);
+            given(studyRecordDomainService.countDueCards(eq(testUser), any(LocalDate.class))).willReturn(0);
+            given(studyRecordDomainService.countTotalStudiedCards(testUser)).willReturn(0);
+            given(studyRecordDomainService.countTotalStudiedUserCards(testUser)).willReturn(0);
             given(cardDomainService.count()).willReturn(0L);
-            given(studyDomainService.countTotalAndCorrect(testUser))
+            given(userCardDomainService.countByUser(testUser)).willReturn(0L);
+            given(studyRecordDomainService.countTotalAndCorrect(testUser))
                     .willReturn(new StudyRecordRepositoryCustom.TotalAndCorrect(0L, 0L));
 
             given(categoryDomainService.findLeafCategories()).willReturn(Collections.emptyList());
-            given(cardDomainService.countAllByCategory()).willReturn(Collections.emptyList());
-            given(studyDomainService.countStudiedByCategory(testUser)).willReturn(Collections.emptyList());
-            given(studyDomainService.countLearningByCategory(testUser)).willReturn(Collections.emptyList());
-            given(studyDomainService.countDueByCategory(eq(testUser), any(LocalDate.class)))
+            given(studyCategoryAggregationService.countTotalCardsByCategoryWithUserCards(testUser))
+                    .willReturn(Collections.emptyMap());
+            given(studyRecordDomainService.countStudiedByCategoryWithUserCards(testUser)).willReturn(Collections.emptyList());
+            given(studyRecordDomainService.countLearningByCategoryWithUserCards(testUser)).willReturn(Collections.emptyList());
+            given(studyRecordDomainService.countDueByCategoryWithUserCards(eq(testUser), any(LocalDate.class)))
                     .willReturn(Collections.emptyList());
-            given(studyDomainService.countMasteredByCategory(testUser)).willReturn(Collections.emptyList());
-            given(studyDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
+            given(studyRecordDomainService.countMasteredByCategoryWithUserCards(testUser)).willReturn(Collections.emptyList());
+            given(studyRecordDomainService.findDailyActivity(eq(testUser), any(LocalDateTime.class)))
                     .willReturn(List.of(
                             new StudyRecordRepositoryCustom.DailyActivity(today, 20L, 18L),
                             new StudyRecordRepositoryCustom.DailyActivity(yesterday, 15L, 12L)
